--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
-<DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<tittle>Coin Price</tittle>    
-</head>    
-    <body>
-    <script src="fetch.js"></script>
-    </body>
-    
+	<meta charset="UTF-8">
+	<title>Coin Price</title>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+</head>
+<style>
+* {
+	margin: 0; 
+	padding: 0; 
+	box-sizing: border-box;
+}
+
+hr {
+	width: 250px;
+	height: 3px;
+	background-color: #3f51b5;
+	border: 0;
+	margin-bottom: 50px;
+	margin-left: 40%;
+}
+h1 {
+	font: bold 60px "Open Sans", sans-serif;
+	margin bottom: 40px;
+	text-align: center;
+}
+
+</style> 
+
+<body">
+	<h1>Coin Price: <span id="price"></span>!</h1>
+	<hr align="center">
+	<script src="fetch.js"></script>
+</body>
 </html>
-</DOCTYPE>
